syntax = "proto3";

import "pfs/route/proto/route.proto";

package routeprotolog;

message StartRegister {
    string id = 1;
    string address = 2;
}

message FinishRegister {
    string id = 1;
    string address = 2;
    string error = 3;
}

message Version {
    int64 result = 1;
    string error = 2;
}

message StartAssignRoles {
}

message FinishAssignRoles {
    string error = 1;
}

message FailedToAssignRoles {
    map<string, routeproto.ServerState> server_states = 1;
    uint64 num_shards = 2;
    uint64 num_replicas = 3;
}

message SetServerState {
    routeproto.ServerState serverState = 1;
}

message AddServerRole {
    routeproto.ServerRole serverRole = 1;
    string error = 2;
}

message RemoveServerRole {
    routeproto.ServerRole serverRole = 1;
    string error = 2;
}

message SetServerRole {
    routeproto.ServerRole serverRole = 2;
}

message DeleteServerRole {
    routeproto.ServerRole serverRole = 2;
}

message SetAddresses {
    routeproto.Addresses addresses = 1;
}

message GetMasterAddress {
    uint64 shard = 1;
    int64 version = 2; 
    string result = 3;
    bool ok = 4;
    string error = 5;
}

message GetReplicaAddresses {
    uint64 shard = 1;
    int64 version = 2; 
    map<string, bool> result = 3;
    string error = 4;
}

message GetShardToMasterAddress {
    int64 version = 1; 
    map<uint64, string> result = 2;
    string error = 3;
}

message ReplicaAddresses {
    map<string, bool> addresses = 1;
}

message GetShardToReplicaAddresses {
    int64 version = 1;
    map<uint64, ReplicaAddresses>  result = 2;
    string error = 3;
}
